Initial Gitlab commit for TCL lib

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>nfs-odfi-dev-tcl</name>
+	<name>odfi-dev-tcl</name>
 	<comment></comment>
 	<projects>
 	</projects>
