Added Welcome page and last version of common template

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: <% $module name %>
+name: TCL Common Library
 markdown: redcarpet
 pygments: true
 odfi:
-    id: <% $module id %>
+    id: odfi-dev-tcl
